# wandb-handson

./: .gitignore  README.md  README_EN.md
ART-E/: .env.example  .gitignore  README.md  art_e (1).ipynb  art_e.py  config.py  eval_model.py  overrides.txt  pyproject.toml  requirements.txt  requirements_local.txt  test_model.py  utils.py
ART-E/.github/workflows/: slides.yml
ART-E/docs/: art_e_guide.md  slides.md
esim-agent-demo/: .gitignore  AGENT.md  README.md  demo.py  demo_simple_guardrails.py  pyproject.toml  rag_prep.py
esim-agent-demo/cache/: user_cache.json  vector_store_info.json
esim-agent-demo/config/: README.md  config.yaml
esim-agent-demo/database/: price_list.json  reference_page_list_delete_later.md
esim-agent-demo/database/RAG_docs/: README.md  activation_setup.md  coverage_networks.md  device_compatibility.md  faq.md  managing_esims.md  security_privacy.md  travel_tips.md  troubleshooting.md  what_is_esim.md
esim-agent-demo/evaluation/: README.md  eval.py  scorers.py  scorers_booking.py  scorers_end_to_end.py  scorers_multi_agent.py  scorers_plan_search.py  scorers_rag.py
esim-agent-demo/evaluation/reference_code/: _5.2_evals.py  eval_utils.py
esim-agent-demo/evaluation/scenarios/: booking_scenarios.json  end_to_end_scenarios.json  plan_search_scenarios.json  rag_scenarios.json
esim-agent-demo/src/: __init__.py  tools.py  utils.py
esim-agent-demo/src/agents/: __init__.py  booking_agent.py  esim_agent.py  plan_search_agent.py  rag_agent.py
esim-agent-demo/src/reference_code/: _4_multi_agents_demo.py
esim-agent-demo/tests/: __init__.py  test_rag_prep.py  test_tools.py  test_utils.py
esim-agent-demo/tests/evaluation/: __init__.py  test_eval.py
models/: W&B_models_intro_notebook.ipynb
weave_introduction/: README.md  (+3 more)
weave_introduction_handson/: README.md  README_EN.md  README_JP.md  activate.sh  assets.json  config.yaml  instruction.md  main.py  package-lock.json  pyproject.toml  requirements.txt  weave_intro_notebook.ipynb  weave_intro_notebook_with_wandb_inference.ipynb
weave_introduction_handson/en/: 1_1_0_basic_trace.py  1_1_basic_trace.py  1_2_1_agent_sdk.py  1_2_2_multimodal.py  1_2_2_multimodal_gemini.py  1_2_2_multimodal_openai.py  1_2_agent_sdk.py  1_3_advanced_trace.py  1_3_multimodal_openai.py  1_4_advanced_trace.py  1_4_playground.py  1_5_playground.py  1_6_wandb_skills.py  2_1_assets.py  2_1_prompt.py  2_2_dataset.py  2_3_model.py  2_4_score.py  2_5_call.py  3_1_evaluation.py  3_1_offline_evaluation.py  3_2_evaluation_logger.py  3_3_annotation_queue.py  3_3_online_feedback.py  3_4_guardrail_monitoring.py  3_4_monitors.py  4_1_online_feedback.py  4_2_guardrail_monitoring.py  5_1_skills_mcp.py  5_2_automations.py  5_3_dynamic_leaderboards.py  5_4_trace_plots.py  5_5_saved_views.py  5_6_playground.py  __init__.py  config_loader.py
weave_introduction_handson/jp/: 1_1_0_basic_trace.py  1_1_basic_trace.py  1_2_1_agent_sdk.py  1_2_2_multimodal.py  1_2_2_multimodal_gemini.py  1_2_2_multimodal_openai.py  1_2_agent_sdk.py  1_3_advanced_trace.py  1_3_multimodal_openai.py  1_4_advanced_trace.py  1_4_playground.py  1_5_playground.py  1_6_wandb_skills.py  2_1_assets.py  2_1_prompt.py  2_2_dataset.py  2_3_model.py  2_4_score.py  2_5_call.py  3_1_evaluation.py  3_1_offline_evaluation.py  3_2_evaluation_logger.py  3_3_annotation_queue.py  3_3_online_feedback.py  3_4_guardrail_monitoring.py  3_4_monitors.py  4_1_online_feedback.py  4_2_guardrail_monitoring.py  4_3_monitors.py  5_1_skills_mcp.py  5_2_automations.py  5_3_dynamic_leaderboards.py  5_4_trace_plots.py  5_5_saved_views.py  5_6_playground.py  __init__.py  config_loader.py
weave_introduction_handson/tests/: test.py
(+29 files in other folders)
